--- a/index.html
+++ b/index.html
@@ -11,9 +11,7 @@
     <h1>2048</h1>
     <hr>
     <h2>Score: <span id="score">0</span> </h2>
-    <div id="board">
-        <div class="tile"></div>
-    </div>
+    <div id="board"></div>
     
 </body>
 </html>
