--- a/index.html
+++ b/index.html
@@ -8,10 +8,24 @@
     <script src="scripts.js"></script>
 </head>
 <body>
-    <h1>2048</h1>
-    <hr>
-    <h2>Score: <span id="score">0</span> </h2>
-    <div id="board"></div>
+    <div id="board" >
+        <div class="cell" ></div>
+        <div class="cell" ></div>
+        <div class="cell" ></div>
+        <div class="cell" ></div>
+        <div class="cell" ></div>
+        <div class="cell" ></div>
+        <div class="cell" ></div>
+        <div class="cell" ></div>
+        <div class="cell" ></div>
+        <div class="cell" ></div>
+        <div class="cell" ></div>
+        <div class="cell" ></div>
+        <div class="cell" ></div>
+        <div class="cell" ></div>
+        <div class="cell" ></div>
+        <div class="cell" ></div>
+    </div>
     
 </body>
 </html>
