--- a/index.html
+++ b/index.html
@@ -5,26 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>2048</title>
     <link rel="stylesheet" href="style.css">
-    <script src="scripts.js" type="module"></script>
+    <script src="script.js" type="module"></script>
 </head>
 <body>
-    <div id="board" >
-        <div class="cell" ></div>
-        <div class="cell" ></div>
-        <div class="cell" ></div>
-        <div class="cell" ></div>
-        <div class="cell" ></div>
-        <div class="cell" ></div>
-        <div class="cell" ></div>
-        <div class="cell" ></div>
-        <div class="cell" ></div>
-        <div class="cell" ></div>
-        <div class="cell" ></div>
-        <div class="cell" ></div>
-        <div class="cell" ></div>
-        <div class="cell" ></div>
-        <div class="cell" ></div>
-        <div class="cell" ></div>
+    <div id="game-board" >
     </div>
     
 </body>
